--- a/assets/front/basic/css/styles.css
+++ b/assets/front/basic/css/styles.css
@@ -49,7 +49,8 @@ nav#navigation .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:hover, .
     border: none;
 }
 .sidebar-banner img {
-    margin-bottom: 15px;
+    width: 100%;
+    margin-bottom: 10px;
 }
 .sidebar-banner img:last-child {
     margin: 0px;
@@ -57,6 +58,12 @@ nav#navigation .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:hover, .
 .btn-default:hover, .btn-default:focus, .btn-default:active, .btn-default.active, .open .dropdown-toggle.btn-default {
     border-color: #ccc;
 }
+
+/* Begin Custom Pagination */
+.row-pagination {
+    text-align: right;
+}
+/* End Custom Pagination */
 
 /* Begin Custom Carousel Slide */
 .item,
