--- a/assets/front/plugin/bootstrap-calendar/css/calendar.css
+++ b/assets/front/plugin/bootstrap-calendar/css/calendar.css
@@ -439,8 +439,8 @@ span[data-cal-date] {
   -moz-transition: all 0.1s ease-in-out;
   -ms-transition: all 0.1s ease-in-out;
   -o-transition: all 0.1s ease-in-out;
-  margin-top: 15px;
-  margin-right: 15px;
+  /*margin-top: 15px;
+  margin-right: 15px;*/
 }
 span[data-cal-date]:hover {
   opacity: 1;
